package org.example.CapaEntidades;

public class Imagen {

    String rutaImagen;

    public Imagen(String rutaImagen) {
        this.rutaImagen = rutaImagen;
    }
}
